--- a/src/styles/AppClima.css
+++ b/src/styles/AppClima.css
@@ -1,90 +1,117 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+}
 
+::-webkit-scrollbar {
+  display: none;
+}
 
 
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
+  color: #fff;
+  text-shadow: 0 0 5px black;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  text-align: center;
+  background-image: url('https://s1.best-wallpaper.net/wallpaper/m/1609/Saint-Mary-Lake-Glacier-National-Park-Montana-USA-sunset-mountains_m.webp');
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+}
+
+.container {
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.02);
+  backdrop-filter: blur(10px);
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1 {
+  margin-bottom: 20px;
+}
+
+form {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+form *{
+  margin-left: 10px;
+  border-radius: 5px;
+}
+
+form input{
+  padding: 5px 10px;
+  font-weight: bold;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+h2 {
+  margin-bottom: 10px;
+}
+
+p {
+  margin-bottom: 5px;
+}
+
+img {
+  border-radius: 5px;
+  filter: drop-shadow(0 0 5px aqua);
+  margin-top: 10px;
+}
+
+/* Estilos para móviles */
+@media (max-width: 500px) {
+
   .container {
-    max-width: 600px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.02);
+    backdrop-filter: blur(10px);
+    max-width: 500px;
     margin: 0 auto;
     padding: 20px;
   }
-  
-  h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
+
   form {
-    display: flex;
-    margin-bottom: 20px;
+    width: 300px;
+    display: grid;
+    place-items: center;
   }
-  
-  input[type="text"] {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  h2 {
-    font-size: 20px;
+
+  form *{
     margin-bottom: 10px;
   }
-  
+
+  button {
+    padding: 8px 16px;
+  }
+
   p {
-    margin-bottom: 5px;
+    font-size: 14px;
   }
-  
+
   img {
-    width: 150px;
-    height: 150px;
-    margin-top: 10px;
+    width: 40px;
+    height: 40px;
   }
-  
-  /* Estilos para móviles */
-  @media (max-width: 600px) {
-    h1 {
-      font-size: 20px;
-    }
-  
-    input[type="text"] {
-      font-size: 14px;
-    }
-  
-    button {
-      padding: 8px 16px;
-    }
-  
-    h2 {
-      font-size: 18px;
-    }
-  
-    p {
-      font-size: 14px;
-    }
-  
-    img {
-      width: 40px;
-      height: 40px;
-    }
-  }
-  
+}
